--- a/IOSInstagramClone/Base.lproj/Main.storyboard
+++ b/IOSInstagramClone/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
         <!--Login View Controller-->
         <scene sceneID="6oN-yM-RRw">
             <objects>
-                <viewController id="kHP-hj-bYA" customClass="LoginViewController" customModule="IOSInstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginVCID" id="kHP-hj-bYA" customClass="LoginViewController" customModule="IOSInstagramClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BZm-6z-gMI"/>
                         <viewControllerLayoutGuide type="bottom" id="sA5-zG-Bph"/>
@@ -109,7 +109,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="66" id="k0O-WK-MhM"/>
                                 </constraints>
-                                <state key="normal" title="SignUp"/>
+                                <state key="normal" title="Sign Up"/>
                                 <connections>
                                     <action selector="signUpClicked:" destination="kHP-hj-bYA" eventType="touchUpInside" id="pAU-bG-pt1"/>
                                 </connections>
@@ -119,7 +119,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="66" id="24v-rz-HAo"/>
                                 </constraints>
-                                <state key="normal" title="SignIn"/>
+                                <state key="normal" title="Sign In"/>
                                 <connections>
                                     <action selector="signInClicked:" destination="kHP-hj-bYA" eventType="touchUpInside" id="k6e-Z6-bah"/>
                                 </connections>
@@ -155,7 +155,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarID" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
