--- a/IOSInstagramClone/Base.lproj/Main.storyboard
+++ b/IOSInstagramClone/Base.lproj/Main.storyboard
@@ -21,7 +21,19 @@
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YQa-Ez-NXA">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YQa-Ez-NXA" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="FQf-ME-Gd0"/>
+                            <constraint firstItem="YQa-Ez-NXA" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="JOM-Gg-TJo"/>
+                            <constraint firstAttribute="trailing" secondItem="YQa-Ez-NXA" secondAttribute="trailing" id="Mcu-kt-NzE"/>
+                            <constraint firstItem="YQa-Ez-NXA" firstAttribute="bottom" secondItem="4ug-Mw-9AY" secondAttribute="top" id="cmT-b3-K1F"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="NzO-oa-BJk">
                         <barButtonItem key="rightBarButtonItem" title="Logout" id="SKE-ay-Xwj">
@@ -30,12 +42,15 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="feedTableView" destination="YQa-Ez-NXA" id="YUY-cW-dMv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1688.8" y="-320.68965517241384"/>
         </scene>
-        <!--Upload View Controller-->
+        <!--Post New Image-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="UploadViewController" customModule="IOSInstagramClone" customModuleProvider="target" sceneMemberID="viewController">
@@ -46,9 +61,49 @@
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectImage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="J2J-WW-ebS">
+                                <rect key="frame" x="16" y="86" width="343" height="258"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="258" id="W3f-hK-uTP"/>
+                                    <constraint firstAttribute="width" constant="343" id="xrk-fL-VXn"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="y1m-Nx-jI9">
+                                <rect key="frame" x="16" y="352" width="343" height="78"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="DkD-TG-WYx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKc-cj-JeP">
+                                <rect key="frame" x="321" y="438" width="31" height="30"/>
+                                <state key="normal" title="Post"/>
+                                <connections>
+                                    <action selector="postClicked:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="gk6-fI-aYE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="cKc-cj-JeP" secondAttribute="trailing" constant="7" id="85e-YF-rFg"/>
+                            <constraint firstItem="J2J-WW-ebS" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="22" id="J4G-e1-lN4"/>
+                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="cKc-cj-JeP" secondAttribute="bottom" constant="150" id="PGX-36-b5o"/>
+                            <constraint firstItem="J2J-WW-ebS" firstAttribute="trailing" secondItem="QS5-Rx-YEW" secondAttribute="trailingMargin" id="Udm-e0-irW"/>
+                            <constraint firstItem="y1m-Nx-jI9" firstAttribute="top" secondItem="J2J-WW-ebS" secondAttribute="bottom" constant="8" symbolic="YES" id="erE-xZ-WEK"/>
+                            <constraint firstItem="J2J-WW-ebS" firstAttribute="trailing" secondItem="y1m-Nx-jI9" secondAttribute="trailing" id="j4W-SV-85z"/>
+                            <constraint firstItem="cKc-cj-JeP" firstAttribute="top" secondItem="y1m-Nx-jI9" secondAttribute="bottom" constant="8" symbolic="YES" id="kOO-tu-rYe"/>
+                            <constraint firstItem="J2J-WW-ebS" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" id="ltu-HS-H1K"/>
+                            <constraint firstItem="J2J-WW-ebS" firstAttribute="leading" secondItem="y1m-Nx-jI9" secondAttribute="leading" id="q5b-nI-ih5"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="LyI-le-si1"/>
+                    <navigationItem key="navigationItem" title="Post New Image" id="LyI-le-si1"/>
+                    <connections>
+                        <outlet property="descriptionTextView" destination="y1m-Nx-jI9" id="bDs-HE-ygE"/>
+                        <outlet property="selectedImageView" destination="J2J-WW-ebS" id="0Bu-DT-coq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -193,5 +248,6 @@
     <resources>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
+        <image name="selectImage.jpg" width="343" height="258"/>
     </resources>
 </document>
